--- a/public/css/page-orphanages.css
+++ b/public/css/page-orphanages.css
@@ -32,6 +32,17 @@ aside footer p {
   margin-top: 0.8rem;
 }
 
+.user-access {
+  margin-bottom: 4rem;
+}
+
+.user-access a {
+  text-decoration: none;
+  display: block;
+  color: white;
+  margin: 1rem 0;
+}
+
 #mapid {
   width: 100%;
   height: 100%;
